@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.14
+VERSION=1.9.15
 
-DEPENDENCY="zeda=1.6.0;zm=1.3.9"
+DEPENDENCY="zeda=1.6.3;zm=1.3.12"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
