@@ -1,4 +1,5 @@
 MAKEFILEGEN=`which zeda-makefile-gen`
+MAKEDEB=`which zeda-deb-gen`
 
 all:
 ifeq ($(MAKEFILEGEN),)
@@ -16,3 +17,10 @@ install:
 	@$(MAKEFILEGEN) | make -f - install
 uninstall:
 	@$(MAKEFILEGEN) | make -f - uninstall
+deb:
+ifeq ($(MAKEDEB),)
+	echo "ZEDA is not installed."
+else
+	@$(MAKEDEB)
+	@$(MAKEDEB) clean
+endif
